k8s/ingress/fanout-sample.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: service1
          servicePort: 4200
      - path: /bar
        backend:
          serviceName: service2
          servicePort: 8080
