k8s/ingress/sample-ingress.yaml
---
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: sample-ingress
  spec:
    backend:
      serviceName: samplesvc
      servicePort: 80
